--- a/assets/stylesheets/internal/_sass/_header.scss
+++ b/assets/stylesheets/internal/_sass/_header.scss
@@ -201,6 +201,8 @@
     #search-form {
 
       float: left;
+      min-width: 35%;
+      max-width: 50%;
       position: relative;
       display: inline-block;
 
@@ -228,12 +230,11 @@
         border: 0px;
         color: white;
         outline: none;
-        min-width: 50%;
-        max-width: 75%;
+
         position: relative;
-        border-radius: $user_avatar_size;
         display: inline-block;
         background-color: #2a343c;
+        border-radius: $user_avatar_size;
         padding: 0em 1em 0px $user_avatar_size;
 
         -webkit-user-select: all;
@@ -241,7 +242,7 @@
         -ms-user-select: all;
         user-select: all;
 
-        @include size(35em, 100%);
+        @include size(100%);
 
       }
 
