--- a/assets/stylesheets/internal/_sass/_content.scss
+++ b/assets/stylesheets/internal/_sass/_content.scss
@@ -96,14 +96,51 @@
 
     }
 
-    #promoted {
+    #content-promotion-container {
 
-      top: 50%;
       right: 2em;
-      z-index: 2;
-      margin-top: -30px;
+      z-index: 10;
+      padding: 4px;
+      margin-top: 4px;
+      min-width: 468px;
+      min-height: 60px;
+      max-height: 100%;
       position: absolute;
       display: inline-block;
+      border: 1px solid rgba(white, 0.25);
+
+      @include size(auto);
+      @include position(0px, center);
+
+      @media(max-width: $mobile_break) {
+
+        display: none;
+
+      }
+
+      &:before {
+
+        top: -2em;
+        left: 0.5em;
+        color: white;
+        padding: 1em;
+        font-size: 11px;
+        position: absolute;
+        content: 'Sponsored Content';
+
+        @include transition(all, 0.265s, ease, 0s);
+
+      }
+
+      #promoted {
+
+        float: left;
+        z-index: 20;
+        display: inline-block;
+
+        @include size(100%!important);
+
+      }
 
     }
 
