--- a/assets/stylesheets/internal/compiled/style.css
+++ b/assets/stylesheets/internal/compiled/style.css
@@ -226,7 +226,7 @@ table {
 #main[data-category=".home"] #content-header {
   background-image: url(https://d13yacurqjgara.cloudfront.net/users/104235/screenshots/2165596/attachments/397944/ELE-EO-7.12.jpg); }
   #main[data-category=".home"] #content-header:before {
-    background-color: rgba(58, 175, 185, 0.95); }
+    background-color: #3aafb9; }
 #main[data-category=".home"] .thumb-actions {
   background-color: rgba(58, 175, 185, 0.95); }
   #main[data-category=".home"] .thumb-actions a:hover {
@@ -239,8 +239,9 @@ table {
   background-color: #FF6F59; }
 #main[data-category=".all"] #content-header {
   background-image: url(https://d13yacurqjgara.cloudfront.net/users/104235/screenshots/2165596/attachments/397944/ELE-EO-7.12.jpg); }
-  #main[data-category=".all"] #content-header:before {
-    background-color: rgba(255, 111, 89, 0.95); }
+  #main[data-category=".all"] #content-header:before,
+  #main[data-category=".all"] #content-header #content-promotion-container:before {
+    background-color: #ff6f59; }
 #main[data-category=".all"] .thumb-actions {
   background-color: rgba(255, 111, 89, 0.95); }
   #main[data-category=".all"] .thumb-actions a:hover {
@@ -253,8 +254,9 @@ table {
   background-color: #6870b8; }
 #main[data-category=".design"] #content-header {
   background-image: url(https://d13yacurqjgara.cloudfront.net/users/908898/screenshots/2441366/attachments/474937/5.jpg); }
-  #main[data-category=".design"] #content-header:before {
-    background-color: rgba(104, 112, 184, 0.95); }
+  #main[data-category=".design"] #content-header:before,
+  #main[data-category=".design"] #content-header #content-promotion-container:before {
+    background-color: #6870b8; }
 #main[data-category=".design"] .thumb-actions {
   background-color: rgba(104, 112, 184, 0.95); }
   #main[data-category=".design"] .thumb-actions a:hover {
@@ -267,8 +269,9 @@ table {
   background-color: #09BC8A; }
 #main[data-category=".development"] #content-header {
   background-image: url(https://d13yacurqjgara.cloudfront.net/users/20254/screenshots/712951/attachments/66553/ui_library_fullsize.jpg); }
-  #main[data-category=".development"] #content-header:before {
-    background-color: rgba(9, 188, 138, 0.95); }
+  #main[data-category=".development"] #content-header:before,
+  #main[data-category=".development"] #content-header #content-promotion-container:before {
+    background-color: #09bc8a; }
 #main[data-category=".development"] .thumb-actions {
   background-color: rgba(9, 188, 138, 0.95); }
   #main[data-category=".development"] .thumb-actions a:hover {
@@ -281,8 +284,9 @@ table {
   background-color: #FF6B6B; }
 #main[data-category=".marketing"] #content-header {
   background-image: url(https://d13yacurqjgara.cloudfront.net/users/92955/screenshots/2318620/attachments/440464/endpoint.jpg); }
-  #main[data-category=".marketing"] #content-header:before {
-    background-color: rgba(255, 107, 107, 0.95); }
+  #main[data-category=".marketing"] #content-header:before,
+  #main[data-category=".marketing"] #content-header #content-promotion-container:before {
+    background-color: #ff6b6b; }
 #main[data-category=".marketing"] .thumb-actions {
   background-color: rgba(255, 107, 107, 0.95); }
   #main[data-category=".marketing"] .thumb-actions a:hover {
@@ -295,8 +299,9 @@ table {
   background-color: #7B904B; }
 #main[data-category=".analytics"] #content-header {
   background-image: url(https://d13yacurqjgara.cloudfront.net/users/92955/screenshots/2318620/attachments/440464/endpoint.jpg); }
-  #main[data-category=".analytics"] #content-header:before {
-    background-color: rgba(123, 144, 75, 0.95); }
+  #main[data-category=".analytics"] #content-header:before,
+  #main[data-category=".analytics"] #content-header #content-promotion-container:before {
+    background-color: #7b904b; }
 #main[data-category=".analytics"] .thumb-actions {
   background-color: rgba(123, 144, 75, 0.95); }
   #main[data-category=".analytics"] .thumb-actions a:hover {
@@ -309,8 +314,9 @@ table {
   background-color: #774C60; }
 #main[data-category=".productivity"] #content-header {
   background-image: url(https://d13yacurqjgara.cloudfront.net/users/92955/screenshots/2318620/attachments/440464/endpoint.jpg); }
-  #main[data-category=".productivity"] #content-header:before {
-    background-color: rgba(119, 76, 96, 0.95); }
+  #main[data-category=".productivity"] #content-header:before,
+  #main[data-category=".productivity"] #content-header #content-promotion-container:before {
+    background-color: #774c60; }
 #main[data-category=".productivity"] .thumb-actions {
   background-color: rgba(119, 76, 96, 0.95); }
   #main[data-category=".productivity"] .thumb-actions a:hover {
@@ -323,8 +329,9 @@ table {
   background-color: #2F99E7; }
 #main[data-category=".web-hosting"] #content-header {
   background-image: url(https://d13yacurqjgara.cloudfront.net/users/6541/screenshots/997791/dribb.png); }
-  #main[data-category=".web-hosting"] #content-header:before {
-    background-color: rgba(47, 153, 231, 0.95); }
+  #main[data-category=".web-hosting"] #content-header:before,
+  #main[data-category=".web-hosting"] #content-header #content-promotion-container:before {
+    background-color: #2f99e7; }
 #main[data-category=".web-hosting"] .thumb-actions {
   background-color: rgba(47, 153, 231, 0.95); }
   #main[data-category=".web-hosting"] .thumb-actions a:hover {
@@ -337,8 +344,9 @@ table {
   background-color: #E7B03D; }
 #main[data-category=".miscellaneous"] #content-header {
   background-image: url(https://d13yacurqjgara.cloudfront.net/users/6541/screenshots/997791/dribb.png); }
-  #main[data-category=".miscellaneous"] #content-header:before {
-    background-color: rgba(231, 176, 61, 0.95); }
+  #main[data-category=".miscellaneous"] #content-header:before,
+  #main[data-category=".miscellaneous"] #content-header #content-promotion-container:before {
+    background-color: #e7b03d; }
 #main[data-category=".miscellaneous"] .thumb-actions {
   background-color: rgba(231, 176, 61, 0.95); }
   #main[data-category=".miscellaneous"] .thumb-actions a:hover {
@@ -404,7 +412,7 @@ table {
       #page-header #logo-container h1 span {
         color: white;
         font-weight: 300; }
-    #page-header #logo-container p {
+    #page-header #logo-container h2 {
       color: #858585;
       font-size: 9px;
       font-weight: 300;
@@ -772,13 +780,44 @@ aside {
             #content #content-header h1 span#tag {
               margin-top: 5px;
               margin-left: 0px; } }
-    #content #content-header #promoted {
-      top: 50%;
+    #content #content-header #content-promotion-container {
       right: 2em;
-      z-index: 2;
-      margin-top: -30px;
+      z-index: 10;
+      padding: 4px;
+      margin-top: 4px;
+      min-width: 468px;
+      min-height: 60px;
+      max-height: 100%;
       position: absolute;
-      display: inline-block; }
+      display: inline-block;
+      border: 1px solid rgba(255, 255, 255, 0.25);
+      width: auto;
+      height: auto;
+      top: 50% !important;
+      -webkit-transform: translate(0px, -50%);
+      -ms-transform: translate(0px, -50%);
+      transform: translate(0px, -50%); }
+      @media (max-width: 600px) {
+        #content #content-header #content-promotion-container {
+          display: none; } }
+      #content #content-header #content-promotion-container:before {
+        top: -2em;
+        left: 0.5em;
+        color: white;
+        padding: 1em;
+        font-size: 11px;
+        position: absolute;
+        content: 'Sponsored Content';
+        -webkit-transition: all 0.265s ease 0s;
+        -moz-transition: all 0.265s ease 0s;
+        -ms-transition: all 0.265s ease 0s;
+        transition: all 0.265s ease 0s; }
+      #content #content-header #content-promotion-container #promoted {
+        float: left;
+        z-index: 20;
+        display: inline-block;
+        width: 100% !important;
+        height: 100% !important; }
     #content #content-header #content-filter {
       z-index: 2;
       float: right;
