--- a/assets/stylesheets/internal/compiled/style.css
+++ b/assets/stylesheets/internal/compiled/style.css
@@ -825,14 +825,11 @@ aside {
     #content #content-header #content-promotion-container {
       right: 2em;
       z-index: 10;
-      padding: 4px;
-      margin-top: 4px;
       min-width: 468px;
       min-height: 60px;
       max-height: 100%;
       position: absolute;
       display: inline-block;
-      border: 1px solid rgba(255, 255, 255, 0.25);
       width: auto;
       height: auto;
       top: 50% !important;
@@ -847,6 +844,7 @@ aside {
         left: 0.5em;
         color: white;
         padding: 1em;
+        display: none;
         font-size: 11px;
         position: absolute;
         content: 'Sponsored Content';
@@ -1140,7 +1138,7 @@ aside {
   100% {
     background-position: right; } }
               #content #tools-list li .tool .actions li .tool-action[data-action="heart"] .heart {
-                background: url(http://demos.9lessons.info/twitterHeart/images/web_heart_animation.png);
+                background: url("../../../images/heart_animation.png");
                 background-position: left;
                 background-repeat: no-repeat;
                 cursor: pointer;
