Minor color changes, major updates to tool data
Made lots of updates to how the tools are loaded, along with the data
being imported from Firebase.

--- a/assets/stylesheets/internal/_sass/_colors.scss
+++ b/assets/stylesheets/internal/_sass/_colors.scss
@@ -23,7 +23,7 @@ $search_button_background: #8b9aa8;
 $sidebar_background: #242b34;
 $sidebar_cat_nav_background: #2a343c;
 $sidebar_subcat_nav_background: #1f252c;
-$sidebar_color: #65717C;
+$sidebar_color: rgba(white, 0.35);
 
 $content_background: #e3e8ed;
 
