--- a/assets/stylesheets/internal/_sass/_content.scss
+++ b/assets/stylesheets/internal/_sass/_content.scss
@@ -319,7 +319,7 @@
            position: relative;
            padding-bottom: 56%;
            background-repeat: no-repeat;
-           background-position: center;
+           background-position: top center;
            margin: -10px -10px 15px -10px;
 
            border-top-right-radius: 4px;
