--- a/assets/stylesheets/internal/_sass/_content.scss
+++ b/assets/stylesheets/internal/_sass/_content.scss
@@ -2,8 +2,8 @@
 
 #content {
 
-  float: left;
   z-index: 0;
+  float: left;
   min-height: 100vh;
   position: relative;
   padding-bottom: 6em;
@@ -294,13 +294,13 @@
       .tool {
 
         float: left;
-        padding: 10px;
+        padding: 0px;
         background: white;
         max-height: 308px;
-        border-radius: 4px;
+        // border-radius: 4px;
         overflow: hidden;
         display: inline-block;
-        box-shadow: 0px 1px 5px -2px rgba(black, 0.5);
+        box-shadow: 0px 1px 3px -2px rgba(black, 0.65);
 
         @include size(100%, auto);
 
@@ -317,35 +317,31 @@
            display: block;
            overflow: hidden;
            position: relative;
-           padding-bottom: 56%;
+           padding-bottom: 54%;
            background-repeat: no-repeat;
            background-position: top center;
-           margin: -10px -10px 15px -10px;
+           margin: 0px 0px 15px 0px;
 
-           border-top-right-radius: 4px;
-           border-top-left-radius: 4px;
-
-           @include size(calc(100% + 20px), 0px);
+           @include size(100%, 0px);
            @include backgroundsize(cover);
 
            .thumb-actions {
 
               top:  0px;
               left: 0px;
+              right: 0px;
+              bottom: 0px;
 
               z-index: 1;
 
               text-align: center;
               position: absolute;
 
-              border-top-right-radius: 4px;
-              border-top-left-radius: 4px;
-
               // background: rgba($sidebar_background, 0.95);
 
               @include size(100%);
               @include opacity(0);
-              @include transition(all, 0.265s, ease, 0s);
+              @include transition(opacity, 0.265s, ease, 0s);
 
               a {
 
@@ -381,7 +377,11 @@
 
             z-index: 0;
             float: left;
+            display: block;
             max-width: 100%;
+            min-width: 100%;
+            max-height: 100%;
+            min-height: 100%;
             position: absolute;
 
             @include size(auto);
@@ -405,6 +405,7 @@
 
           float: left;
           clear: both;
+          padding: 0px 10px;
           margin-bottom: 20px;
 
           @include size(100%, auto);
@@ -500,6 +501,7 @@
 
           display: block;
           position: relative;
+          margin: 0px 0px 10px 0px;
 
           @include size(100%, auto);
 
