--- a/assets/stylesheets/internal/lib.compiled.css
+++ b/assets/stylesheets/internal/lib.compiled.css
@@ -20,194 +20,6 @@ table {
   border-spacing: 0;
   border-collapse: collapse; }
 
-/*!
- *
- * Global Sass Functions
- *
- * An assortment of different functions
- * that will be used throughout the project.
- *
- */
-/* set rem font size with pixel fallback */
-/*!
- *
- * Append vendor prefixes to css styles
- *
- * $a = map of declarations
- * $b = list of prefixes    ["webkit moz ms o"]
- * $c = property of item
- * $d = value of property
- * $e = vendor to output
- *
- * To absolute center an element, print the following:
- * @include prefix((declaration: property), prefixes);
- *
- */
-/*!
- *
- * Transform the elements rotation, scale, and position
- *
- * $a = int + deg ["90deg"]
- * $b = int       ["1"]
- * $c = int + px  ["center"]
- * $d = int + px  ["center"]
- * $e = boolean   ["true" - toggle hardware acceleration]
- *
- * To absolute center an element, print the following:
- * @include position($a, $b, center, center, $e);
- *
- * To center an element on x axis, print the following:
- * @include position($a, $b, center, $d, $e);
- *
- * To center an element on y axis, print the following:
- * @include position($a, $b, $c, center, $e);
- *
- * To rotate an element, print the following:
- * @include position(#deg, $b, $c, $d, $e);
- *
- * To scale an element, print the following:
- * @include position($a, scale, $c, $d, $e);
- *
- */
-/*!
- *
- * Reset the browsers default box sizing
- * to eliminate weird spacing bugs
- *
- * $a = box model ["border-box"]
- *
- */
-/*!
- *
- * Set the targeted element to display
- * as a cross-browser flex-box
- *
- */
-/*!
- *
- * Disable the selection of
- * text and elements.
- *
- */
-/*!
- *
- * Animate the element
- *
- * $a = selector ["all"]
- * $b = speed    ["1s"]
- * $c = style    ["linear"]
- * $d = delay    ["0s"]
- *
- */
-/*!
- *
- * Transform the elements position
- *
- * $a = x position ["0px"]
- * $b = y position ["$a"]
- *
- * To absolute center an element, print the following:
- * @include position(center);
- *
- * To center an element on x axis, print the following:
- * @include position(center, $b);
- *
- * To center an element on y axis, print the following:
- * @include position($a, center);
- *
- */
-/*!
- *
- * Scale the size of the element using the
- * transform method using a 0 - 1 integer.
- * Auto defaults to a 1:1 scale.
- *
- * $a = integer ["1"]
- *
- * To scale the element, print the following:
- * @include scale($a);
- *
- */
-/*!
- *
- * Add a cross-browser box shadow to the element.
- *
- * $a = integer + px      ["0px"]
- * $b = integer + px      ["2px"]
- * $c = integer + px      ["3px"]
- * $d = integer + px      ["-1px"]
- * $e = hex | rgb | rgba  ["black"]
- *
- * To add the default shadow, just print the following:
- * @include boxshadow();
- *
- * To add your own box shadow, print the following:
- * @include boxshadow($a, $b, $c, $d, $e);
- *
- */
-/*!
- *
- * Forces the browser to use hardware acceleration
- *
- */
-/*!
- *
- * Convert the pixel value of the font-size
- * into rem format, while keeping the pixel
- * value as a fallback
- *
- * $a = font size in pixels ["16px"]
- *
- * To convert the font size, print the following:
- * @include font-size(#px);
- *
- */
-/*!
- *
- * Convert the pixel value of the line-height
- * into rem format, while keeping the pixel
- * value as a fallback
- *
- * $a = line height in pixels ["16"]
- *
- * To convert the font size, print the following:
- * @include line-height(int);
- *
- */
-/*!
- *
- * Convert the pixel value of the font-size
- * into rem format, while keeping the pixel
- * value as a fallback
- *
- * $a = font size in pixels ["16px"]
- *
- * To convert the font size, print the following:
- * @include fontsize(#px);
- *
- */
-/*!
- *
- * Set the opacity of the selected element
- * using a 0 - 1 scale. You can also set the value
- * to 'hidden' to set the opacity to zero
- *
- * $a = opacity ["1"]
- *
- * To hide the element, print the following:
- * @include opacity(hidden);
- *
- */
-/* set the size of an element */
-/*!
- *
- * Set the background image of an element
- * to fullscreen mode - fill the entire
- * element with the image.
- *
- * $a = size ["cover", "scale", "contain"]
- *
- */
 *, *:before, *:after {
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -775,8 +587,8 @@ aside {
   transform: translate(0px, 9px); }
 
 #content {
-  float: left;
   z-index: 0;
+  float: left;
   min-height: 100vh;
   position: relative;
   padding-bottom: 6em;
@@ -976,13 +788,12 @@ aside {
           height: auto; } }
       #content #tools-list li .tool {
         float: left;
-        padding: 10px;
+        padding: 0px;
         background: white;
         max-height: 308px;
-        border-radius: 4px;
         overflow: hidden;
         display: inline-block;
-        box-shadow: 0px 1px 5px -2px rgba(0, 0, 0, 0.5);
+        box-shadow: 0px 1px 3px -2px rgba(0, 0, 0, 0.65);
         width: 100%;
         height: auto; }
         @media (max-width: 900px) {
@@ -994,13 +805,11 @@ aside {
           display: block;
           overflow: hidden;
           position: relative;
-          padding-bottom: 56%;
+          padding-bottom: 54%;
           background-repeat: no-repeat;
           background-position: top center;
-          margin: -10px -10px 15px -10px;
-          border-top-right-radius: 4px;
-          border-top-left-radius: 4px;
-          width: calc(100% + 20px);
+          margin: 0px 0px 15px 0px;
+          width: 100%;
           height: 0px;
           -webkit-background-size: cover;
           -moz-background-size: cover;
@@ -1009,19 +818,19 @@ aside {
           #content #tools-list li .tool .thumbnail .thumb-actions {
             top: 0px;
             left: 0px;
+            right: 0px;
+            bottom: 0px;
             z-index: 1;
             text-align: center;
             position: absolute;
-            border-top-right-radius: 4px;
-            border-top-left-radius: 4px;
             width: 100%;
             height: 100%;
             opacity: 0;
             filter: alpha(opacity=0);
-            -webkit-transition: all 0.265s ease 0s;
-            -moz-transition: all 0.265s ease 0s;
-            -ms-transition: all 0.265s ease 0s;
-            transition: all 0.265s ease 0s; }
+            -webkit-transition: opacity 0.265s ease 0s;
+            -moz-transition: opacity 0.265s ease 0s;
+            -ms-transition: opacity 0.265s ease 0s;
+            transition: opacity 0.265s ease 0s; }
             #content #tools-list li .tool .thumbnail .thumb-actions a {
               color: white;
               font-size: 1.25em;
@@ -1044,7 +853,11 @@ aside {
           #content #tools-list li .tool .thumbnail img {
             z-index: 0;
             float: left;
+            display: block;
             max-width: 100%;
+            min-width: 100%;
+            max-height: 100%;
+            min-height: 100%;
             position: absolute;
             width: auto;
             height: auto;
@@ -1059,6 +872,7 @@ aside {
         #content #tools-list li .tool .details {
           float: left;
           clear: both;
+          padding: 0px 10px;
           margin-bottom: 20px;
           width: 100%;
           height: auto; }
@@ -1116,6 +930,7 @@ aside {
           clear: both;
           display: block;
           position: relative;
+          margin: 0px 0px 10px 0px;
           width: 100%;
           height: auto; }
           #content #tools-list li .tool .actions li {
