Added a "Production Mode" to the template engine
The new "Production Mode" is an easy to set boolean value that changes
the base url of the project, along with all asset locations.

--- a/assets/stylesheets/internal/_sass/_content.scss
+++ b/assets/stylesheets/internal/_sass/_content.scss
@@ -568,7 +568,7 @@
 
                 .heart {
 
-                  background: url('../../../images/heart_animation.png');
+                  background: url('#{$path_images}heart_animation.png');
                   background-position: left;
                   background-repeat: no-repeat;
                   cursor: pointer;
